--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,40 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-continuation</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-http</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-io</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-server</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-util</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>org.eclipse.jetty</groupId>
+		<artifactId>jetty-websocket</artifactId>
+		<version>8.1.3.v20120416</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>3.0-alpha-1</version>
+	</dependency>
   </dependencies>
 </project>
