--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
 
   <name>WOfGames</name>
   <url>http://maven.apache.org</url>
+    <ciManagement>
+        <system>hudson</system>
+        <url>http://localhost:8080/job/WOfGames/</url>
+    </ciManagement>
     <build>
         <plugins>
             <plugin>
